# FrameFusion

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  audio.py  auto.py  channels.json  combine.py  convert.py  data.py  docker-compose.yml  main.py  music-titles.txt  music.py  package-lock.json  package.json  project.avi  style.css  test.py  ui.py  video.py  you.py
api/: .dockerignore  .env.example  Dockerfile  jobs.db  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt
api/app/: main.py
api/app/agents/: _planning.py  anime_researcher.py  base.py  cinematography_agent.py  director_agent.py  director_planning.py  editor_production.py  history_researcher.py  idea_agent.py  music_composer_agent.py  music_director_agent.py  pokemon_researcher.py  production_pipeline.py  registry.py  researcher_agent.py  screenwriter_agent.py  sound_design_agent.py  video_editor_agent.py  visual_agent.py  voice_agent.py  weather_researcher.py  workflow_agent.py
api/app/core/: __init__.py  config.py  errors.py  rate_limit.py  request_logging.py  storage.py  storage_s3.py  upload_helpers.py  upload_validation.py
api/app/jobs/: cleanup.py  (+7 more)
api/scripts/: export_openapi.py
api/tests/: conftest.py  test_channel_batch.py  test_cleanup.py  test_e2e_render.py  test_encode_progress.py  test_health.py  test_job_progress.py  test_jobs.py  test_jobs_api.py  test_lofi.py  test_media_utils.py  test_openapi.py  test_rate_limit.py  test_request_logging.py  test_routers.py  test_shorts.py  test_slideshow.py  test_smoke.py  test_upload_validation.py  test_video_creator.py
(+119 files in other folders)
